org.output
Terminals which are not used

   MARKER
   DEDENT
   INDENT
   DRAWERSTART
   DRAWERKEY
   DRAWERVALUE
   DRAWEREND


Grammar

    0 $accept: doc $end

    1 doc: directives body

    2 directives: directives DIRECTIVE ENDLN
    3           | directives DIRECTIVE WHITESPACE ENDLN
    4           | directives WHITESPACE ENDLN
    5           | directives ENDLN
    6           | /* empty */

    7 body: body headline_block
    8     | headline_block

    9 headline_block: headline ENDLN headline_body
   10               | headline ENDLN
   11               | headline

   12 headline: STARS todo_state headline_with_priority tags

   13 todo_state: TODO
   14           | /* empty */

   15 headline_with_priority: PRIORITY headline_text
   16                       | headline_text PRIORITY headline_text
   17                       | /* empty */

   18 headline_text: headline_text WORD
   19              | headline_text WHITESPACE
   20              | WORD
   21              | WHITESPACE

   22 tags: tags TAG
   23     | /* empty */

   24 headline_body: headline_body WORD
   25              | headline_body WHITESPACE
   26              | headline_body ENDLN
   27              | WORD
   28              | WHITESPACE
   29              | ENDLN


Terminals, with rules where they appear

$end (0) 0
error (256)
ENDLN (258) 2 3 4 5 9 10 26 29
WHITESPACE (259) 3 4 19 21 25 28
DIRECTIVE (260) 2 3
PRIORITY (261) 15 16
STARS (262) 12
TAG (263) 22
WORD (264) 18 20 24 27
MARKER (265)
DEDENT (266)
INDENT (267)
TODO (268) 13
DRAWERSTART (269)
DRAWERKEY (270)
DRAWERVALUE (271)
DRAWEREND (272)


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
doc (19)
    on left: 1, on right: 0
directives (20)
    on left: 2 3 4 5 6, on right: 1 2 3 4 5
body (21)
    on left: 7 8, on right: 1 7
headline_block (22)
    on left: 9 10 11, on right: 7 8
headline (23)
    on left: 12, on right: 9 10 11
todo_state (24)
    on left: 13 14, on right: 12
headline_with_priority (25)
    on left: 15 16 17, on right: 12
headline_text (26)
    on left: 18 19 20 21, on right: 15 16 18 19
tags (27)
    on left: 22 23, on right: 12 22
headline_body (28)
    on left: 24 25 26 27 28 29, on right: 9 24 25 26


state 0

    0 $accept: . doc $end

    $default  reduce using rule 6 (directives)

    doc         go to state 1
    directives  go to state 2


state 1

    0 $accept: doc . $end

    $end  shift, and go to state 3


state 2

    1 doc: directives . body
    2 directives: directives . DIRECTIVE ENDLN
    3           | directives . DIRECTIVE WHITESPACE ENDLN
    4           | directives . WHITESPACE ENDLN
    5           | directives . ENDLN

    ENDLN       shift, and go to state 4
    WHITESPACE  shift, and go to state 5
    DIRECTIVE   shift, and go to state 6
    STARS       shift, and go to state 7

    body            go to state 8
    headline_block  go to state 9
    headline        go to state 10


state 3

    0 $accept: doc $end .

    $default  accept


state 4

    5 directives: directives ENDLN .

    $default  reduce using rule 5 (directives)


state 5

    4 directives: directives WHITESPACE . ENDLN

    ENDLN  shift, and go to state 11


state 6

    2 directives: directives DIRECTIVE . ENDLN
    3           | directives DIRECTIVE . WHITESPACE ENDLN

    ENDLN       shift, and go to state 12
    WHITESPACE  shift, and go to state 13


state 7

   12 headline: STARS . todo_state headline_with_priority tags

    TODO  shift, and go to state 14

    $default  reduce using rule 14 (todo_state)

    todo_state  go to state 15


state 8

    1 doc: directives body .
    7 body: body . headline_block

    STARS  shift, and go to state 7

    $default  reduce using rule 1 (doc)

    headline_block  go to state 16
    headline        go to state 10


state 9

    8 body: headline_block .

    $default  reduce using rule 8 (body)


state 10

    9 headline_block: headline . ENDLN headline_body
   10               | headline . ENDLN
   11               | headline .

    ENDLN  shift, and go to state 17

    $default  reduce using rule 11 (headline_block)


state 11

    4 directives: directives WHITESPACE ENDLN .

    $default  reduce using rule 4 (directives)


state 12

    2 directives: directives DIRECTIVE ENDLN .

    $default  reduce using rule 2 (directives)


state 13

    3 directives: directives DIRECTIVE WHITESPACE . ENDLN

    ENDLN  shift, and go to state 18


state 14

   13 todo_state: TODO .

    $default  reduce using rule 13 (todo_state)


state 15

   12 headline: STARS todo_state . headline_with_priority tags

    WHITESPACE  shift, and go to state 19
    PRIORITY    shift, and go to state 20
    WORD        shift, and go to state 21

    $default  reduce using rule 17 (headline_with_priority)

    headline_with_priority  go to state 22
    headline_text           go to state 23


state 16

    7 body: body headline_block .

    $default  reduce using rule 7 (body)


state 17

    9 headline_block: headline ENDLN . headline_body
   10               | headline ENDLN .

    ENDLN       shift, and go to state 24
    WHITESPACE  shift, and go to state 25
    WORD        shift, and go to state 26

    $default  reduce using rule 10 (headline_block)

    headline_body  go to state 27


state 18

    3 directives: directives DIRECTIVE WHITESPACE ENDLN .

    $default  reduce using rule 3 (directives)


state 19

   21 headline_text: WHITESPACE .

    $default  reduce using rule 21 (headline_text)


state 20

   15 headline_with_priority: PRIORITY . headline_text

    WHITESPACE  shift, and go to state 19
    WORD        shift, and go to state 21

    headline_text  go to state 28


state 21

   20 headline_text: WORD .

    $default  reduce using rule 20 (headline_text)


state 22

   12 headline: STARS todo_state headline_with_priority . tags

    $default  reduce using rule 23 (tags)

    tags  go to state 29


state 23

   16 headline_with_priority: headline_text . PRIORITY headline_text
   18 headline_text: headline_text . WORD
   19              | headline_text . WHITESPACE

    WHITESPACE  shift, and go to state 30
    PRIORITY    shift, and go to state 31
    WORD        shift, and go to state 32


state 24

   29 headline_body: ENDLN .

    $default  reduce using rule 29 (headline_body)


state 25

   28 headline_body: WHITESPACE .

    $default  reduce using rule 28 (headline_body)


state 26

   27 headline_body: WORD .

    $default  reduce using rule 27 (headline_body)


state 27

    9 headline_block: headline ENDLN headline_body .
   24 headline_body: headline_body . WORD
   25              | headline_body . WHITESPACE
   26              | headline_body . ENDLN

    ENDLN       shift, and go to state 33
    WHITESPACE  shift, and go to state 34
    WORD        shift, and go to state 35

    $default  reduce using rule 9 (headline_block)


state 28

   15 headline_with_priority: PRIORITY headline_text .
   18 headline_text: headline_text . WORD
   19              | headline_text . WHITESPACE

    WHITESPACE  shift, and go to state 30
    WORD        shift, and go to state 32

    $default  reduce using rule 15 (headline_with_priority)


state 29

   12 headline: STARS todo_state headline_with_priority tags .
   22 tags: tags . TAG

    TAG  shift, and go to state 36

    $default  reduce using rule 12 (headline)


state 30

   19 headline_text: headline_text WHITESPACE .

    $default  reduce using rule 19 (headline_text)


state 31

   16 headline_with_priority: headline_text PRIORITY . headline_text

    WHITESPACE  shift, and go to state 19
    WORD        shift, and go to state 21

    headline_text  go to state 37


state 32

   18 headline_text: headline_text WORD .

    $default  reduce using rule 18 (headline_text)


state 33

   26 headline_body: headline_body ENDLN .

    $default  reduce using rule 26 (headline_body)


state 34

   25 headline_body: headline_body WHITESPACE .

    $default  reduce using rule 25 (headline_body)


state 35

   24 headline_body: headline_body WORD .

    $default  reduce using rule 24 (headline_body)


state 36

   22 tags: tags TAG .

    $default  reduce using rule 22 (tags)


state 37

   16 headline_with_priority: headline_text PRIORITY headline_text .
   18 headline_text: headline_text . WORD
   19              | headline_text . WHITESPACE

    WHITESPACE  shift, and go to state 30
    WORD        shift, and go to state 32

    $default  reduce using rule 16 (headline_with_priority)
